@@ -1,3 +1,6 @@
+2017-02-14 Magnus Hagdorn
+ * piccolo2/player/PlayerApp.py: use new status class
+
 2016-08-08 Magnus Hagdorn
  * piccolo2/player/player.ui: add button to record dark spectra
  * piccolo2/player/PlayerApp.py: hook up button
